--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">[willshiber]</div>
+            <div class="logo"><a href="index.html">[willshiber]</a></div>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -46,7 +46,7 @@
                             <h4>Current Project</h4>
                             <div class="project-preview">
                                 <h5>NBA Predictions</h5>
-                                <p class="project-description">Creating a neural network to predict the outcome of NBA games. Next steps include integrating sportsbooks' lines and betting data, and automating the prediction process.</p>
+                                <p class="project-description">Attempting to arbitrage sportsbooks' lines and betting data using machine learning. Next steps include automating the prediction process and integrating more betting / value strategies.</p>
                                 <div class="tech-stack">
                                     <span class="tech-tag">Python</span>
                                     <span class="tech-tag">Pytorch</span>
@@ -114,7 +114,7 @@
                 <div class="project-card">
                     <div class="project-image" style="background-image: url('images/basketball.jpeg'); background-size: cover; background-position: center; background-repeat: no-repeat;"></div>
                     <h3>NBA Predictor</h3>
-                    <p>Neural Network to predict the outcome of NBA games. Predicts game winners and point spreads. Next steps include integrating sportsbooks' lines and betting data and automating the prediction process.</p>
+                    <p>Attempting to arbitrage sportsbooks' lines and betting data using machine learning. Predicts game winners and point spreads. Next steps include automating the prediction process and integrating more value strategies.</p>
                     <div class="project-links">
                         <a href="https://github.com/wmjs/nba-predictor" class="project-link"><i class="fab fa-github"></i> View Code</a>
                         <a href="nba_page/nba_predictions.html" class="project-link"><i class="fas fa-external-link-alt"></i> Predictions</a>
