--- a/nba_page/nba_predictions.html
+++ b/nba_page/nba_predictions.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">[willshiber]</div>
+            <div class="logo"><a href="../index.html">[willshiber]</a></div>
             <ul>
                 <li><a href="../index.html#about">About</a></li>
                 <li><a href="../index.html#projects">Projects</a></li>
