--- a/nba_page/nba_predictions.html
+++ b/nba_page/nba_predictions.html
@@ -31,7 +31,7 @@
             <h2>NBA Game Predictions</h2>
             <div class="disclaimer">
                 <p>Last Updated: <span id="lastUpdated">Loading...</span></p>
-                <p>These predictions are generated using machine learning models and historical data. They are for entertainment purposes only. Confidence and Value columns are work in progress.</p>
+                <p>Data is pulled from basketball-reference.com, lines are pulled from sportsline.com both are updated daily at 6 AM EST. These predictions are generated using machine learning models and historical data. They are for entertainment purposes only. Confidence and Value columns are work in progress.</p>
                 <div class="view-selector">
                     <label for="viewType">Select View:</label>
                     <select id="viewType" onchange="updateTableView()">
