--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="nba_page/nba_predictions.html">NBA Predictions</a></li>
             </ul>
         </nav>
     </header>
