--- a/nba_page/nba_predictions.html
+++ b/nba_page/nba_predictions.html
@@ -22,6 +22,7 @@
                 <li><a href="../index.html#projects">Projects</a></li>
                 <li><a href="../index.html#experience">Experience</a></li>
                 <li><a href="../index.html#contact">Contact</a></li>
+                <li><a href="nba_predictions.html">NBA Predictions</a></li>
             </ul>
         </nav>
     </header>
