date update fix

--- a/nba_page/backtesting.html
+++ b/nba_page/backtesting.html
@@ -156,7 +156,7 @@
                 updateTableView();
                 
                 // Set last updated date from last row
-                const updateDateTime = new Date(predictionsData[predictionsData.length - 2].date + 'T00:00:00-05:00');
+                const updateDateTime = new Date(predictionsData[0].date + 'T00:00:00-05:00');
                 document.getElementById('lastUpdated').textContent = updateDateTime.toLocaleDateString('en-US', {
                     month: 'long',
                     day: 'numeric',
