added kalshi project

--- a/index.html
+++ b/index.html
@@ -129,7 +129,16 @@
                         <a href="https://github.com/wmjs/intro-ds-materials" class="project-link"><i class="fab fa-github"></i> View</a>
                     </div>
                 </div>
+                <div class="project-card">
+                    <div class="project-image" style="background-image: url('images/moneysignemoji.jpg'); background-size: contain; background-position: center; background-repeat: no-repeat;"></div>
+                    <h3>Prediction Market Trading</h3>
+                    <p>Developed framework for trading and analyzing prediction markets. Focus mainly on finding arbitrage opportunities within Kalshi's weather markets. </p>
+                    <div class="project-links">
+                        <a href="" class="project-link"><i class="fab fa-github"></i> Code not public</a>
+                    </div>
+                </div>
             </div>
+        </div>
         </section>
 
         <section id="experience" class="experience-section">
