--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <div class="experience-card">
                         <div class="experience-entry">
                             <div class="experience-header">
-                                <h3>Research Assistant</h3>
+                                <h3>Computational Physics Researcher</h3>
                                 <p class="company-name">Entropy for Energy (S4E), Johns Hopkins University</p>
                                 <p class="experience-date">January 2023 - Present</p>
                             </div>
@@ -222,7 +222,7 @@
                     <div class="experience-card">
                         <div class="experience-entry">
                             <div class="experience-header">
-                                <h3>Intern</h3>
+                                <h3>Python Intern</h3>
                                 <p class="company-name">April Labs Inc.</p>
                                 <p class="experience-date">June 2022 - August 2023</p>
                             </div>
