update current project

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>
                         
                         <!-- Current Project Section -->
-                        <div class="current-project">
+                        <!-- <div class="current-project">
                             <h4>Current Project</h4>
                             <div class="project-preview">
                                 <h5>NBA Predictions</h5>
@@ -54,6 +54,19 @@
                                 </div>
                                 <a href="https://github.com/wmjs/nba-predictor" class="project-link"><i class="fab fa-github"></i> View Progress</a>
                                 <a href="nba_page/nba_predictions.html" class="project-link"><i class="fas fa-external-link-alt"></i> Predictions</a>
+                            </div>
+                        </div> -->
+                        <div class="current-project">
+                            <h4>Current Project</h4>
+                            <div class="project-preview">
+                                <h5>Prediction Market Trading</h5>
+                                <p class="project-description">Developing framework for high frequency trading and analyzing of prediction markets. Currently focusing on statistical arbitrage opportunities within Kalshi's weather markets. Looking to expand to other markets on Kalshi and to other prediction market platforms.</p>
+                                <div class="tech-stack">
+                                    <span class="tech-tag">Python</span>
+                                    <span class="tech-tag">Pytorch</span>
+                                    <span class="tech-tag">Statistics</span>
+                                </div>
+                                <a href="" class="project-link"><i class="fab fa-github"></i>Unfortunately, not making this code public :)</a>
                             </div>
                         </div>
                     </div>
