--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
             <h2>Contact Me</h2>
             <div class="contact-container">
                 <div class="contact-info">
-                    <a href="mailto:wshiber1@jh.edu" class="contact-link">
+                    <a href="mailto:wshiber@gmail.com" class="contact-link">
                         <i class="fas fa-envelope"></i>
-                        wshiber1@jh.edu
+                        wshiber@gmail.com
                     </a>
                     <a href="https://www.linkedin.com/in/william-shiber" target="_blank" class="contact-link">
                         <i class="fab fa-linkedin"></i>
