--- a/wordware/wordware.html
+++ b/wordware/wordware.html
@@ -17,6 +17,7 @@
                 <li><a href="https://wmjs.github.io/">Home</a></li>
                 <li><a href="mailto:wshiber@gmail.com">wshiber@gmail.com</a></li>
                 <li><a href="https://www.linkedin.com/in/william-shiber/" target="_blank">LinkedIn</a></li>
+                <li><a href="pdfview.html">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -43,8 +44,7 @@
                         <strong>Some logistics:</strong>
                     </p>
                     <ul>
-                        <li>my resume is in the wordware app I made for this</li>
-                        <li>contact info is linked in the top right corner of the page</li>
+                        <li>my resume and contact info is linked in the top right corner of the page</li>
                         <li>you can navigate to my more boring portfolio page by hitting the home button up top (or you can go there if you wanna win some bets on tonights NBA games (w.i.p.))</li>
                         <li>elevator pitch is at the bottom of the page</li>
                     </ul>
