--- a/wordware/wordware.html
+++ b/wordware/wordware.html
@@ -92,7 +92,7 @@
                     <p>
                         I think we should chat.
                     </p>
-                </section>
+                <!-- </section>
             <section class="section quote-box">
                 <blockquote>
                     <p>"I wanna go fast</p>
@@ -117,7 +117,7 @@
                         color: var(--light-text);
                     }
                 </style>
-            </section>
+            </section> -->
             </div>
         </article>
     </main>
