--- a/wordware/wordware.html
+++ b/wordware/wordware.html
@@ -92,6 +92,11 @@
                     <p>
                         I think we should chat.
                     </p>
+                    <br><br>
+                    <p>
+                        <strong>ps:</strong>"show us how to improve our product before we even talk", I've got some ideas based on my short usage for my aforementioned app
+                    </p>
+
                 <!-- </section>
             <section class="section quote-box">
                 <blockquote>
