fixed bullet spacing

--- a/wordware/wordware.html
+++ b/wordware/wordware.html
@@ -43,7 +43,7 @@
                     <p>
                         <strong>Some logistics:</strong>
                     </p>
-                    <ul>
+                    <ul style="margin-left: 1.5em;">
                         <li>my resume and contact info is linked in the top right corner of the page</li>
                         <li>elevator pitch is at the bottom of the page</li>
                         <li>i made a fun little wordware app <a href="https://app.wordware.ai/explore/apps/b1d410cc-5482-4c86-8c8c-f0d782817aed">here</a></li>
@@ -82,7 +82,7 @@
                         <strong>So what's the plan?</strong>
                     </p>
                     <p>
-                        Data and statistics are where I excel (not a pun cause excel sucks), extracting insights, making data-driven decisions, and improving processes. I love deep, technical problems,
+                        Data and statistics are where I excel (not a pun cause excel sucks), extracting insights, making data-driven decisions, and improving processes.   I love deep, technical problems,
                         I'm creative as hell, a little <em>too</em> hard working, and I go/learn <strong>fast</strong>. 
                     </p>
                     <br><br>
