added email at bottom CTA

--- a/wordware/wordware.html
+++ b/wordware/wordware.html
@@ -47,7 +47,7 @@
                         <li>my resume and contact info is linked in the top right corner of the page</li>
                         <li>elevator pitch is at the bottom of the page</li>
                         <li>i made a fun little wordware app <a href="https://app.wordware.ai/explore/apps/b1d410cc-5482-4c86-8c8c-f0d782817aed">here</a></li>
-                        <li>you can navigate to my more boring portfolio page by hitting the home button up top (or you can go there if you wanna win some bets on tonights NBA games (w.i.p.))</li>
+                        <li>you can navigate to my more boring portfolio page by hitting the home button up top (or you can go there if you wanna win some bets on tonight's NBA games (w.i.p.))</li>
                     </ul>
 
                  <br><br>
@@ -74,7 +74,7 @@
                 <br><br>
                 <section class="section">
                     <h2><strong>And?</strong></h2>
-                    <p>Here's the thing: while I love building things and my experiences position me most closely to "engineering", I'm self-aware enough to know that I don't
+                    <p>Here's the thing: while I love building things and my experiences position me most closely to "engineering," I'm self-aware enough to know that I don't
                         have 4+ years of experience, nor am I a typescript or next.js expert.
                     </p>
                     <br><br>
@@ -92,6 +92,8 @@
                     <p>
                         I think we should chat.
                     </p>
+                    <p><a href="mailto:wshiber@gmail.com">wshiber@gmail.com</a></p>
+                    <p><a href="https://www.linkedin.com/in/william-shiber/">LinkedIn</a></p>
                     <br><br>
                     <p>
                         <strong>ps:</strong>"show us how to improve our product before we even talk", I've got some ideas based on my short usage for my aforementioned app
